RESOLVED FIXED73151
[Qt] [WK2] QtDownloadManager doesn't need to be RefCounted
https://bugs.webkit.org/show_bug.cgi?id=73151
Summary [Qt] [WK2] QtDownloadManager doesn't need to be RefCounted
Caio Marcelo de Oliveira Filho
Reported 2011-11-25 16:51:53 PST
[Qt] [WK2] QtDownloadManager doesn't need be RefCounted
Attachments
Patch (9.82 KB, patch)
2011-11-25 16:56 PST, Caio Marcelo de Oliveira Filho
no flags
Patch for landing (9.78 KB, patch)
2011-11-26 05:50 PST, Caio Marcelo de Oliveira Filho
no flags
Caio Marcelo de Oliveira Filho
Comment 1 2011-11-25 16:56:28 PST
Caio Marcelo de Oliveira Filho
Comment 2 2011-11-26 05:50:53 PST
Created attachment 116655 [details] Patch for landing
WebKit Review Bot
Comment 3 2011-11-26 08:09:56 PST
Comment on attachment 116655 [details] Patch for landing Clearing flags on attachment: 116655 Committed r101195: <http://trac.webkit.org/changeset/101195>
WebKit Review Bot
Comment 4 2011-11-26 08:10:01 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.